# Orchestra-8000

./: README.md  SETUP_GUIDE.md
backend/: .env.example  main.py  pyproject.toml
backend/core/: factory.py
backend/core/models/: triage.py
backend/core/providers/: base.py  groq_api.py  ollama_api.py  watsonx_provider.py
backend/services/: orchestrate_skills.py
docs/: architecture-diagrams.md
docs/uml/: README.md  class-diagram.md  component-diagram.md  deployment-diagram.md  sequence-diagram-triage-flow.md  use-case-diagram.md
frontend/: DASHBOARD_STRUCTURE.md  QUICKSTART.md  README.md  about.html  hero.html  index.html  login.html
frontend/css/: about.css  hero.css  login.css  styles.css
frontend/js/: about.js  api.js  app.js  dashboard-data.js  hero.js  login.js
